WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
295407
[WPE] Fix non-unified build after main@1f8ecb5d
https://bugs.webkit.org/show_bug.cgi?id=295407
Summary
[WPE] Fix non-unified build after main@1f8ecb5d
Sergio Villar Senin
Reported
2025-07-03 09:46:00 PDT
This is the error projects/WebKit/Source/WebKit/UIProcess/wpe/WebPasteboardProxyWPE.cpp: In member function ‘void WebKit::WebPasteboardProxy::readText(IPC::Connection&, const WTF::String&, const WTF::String&, WTF::CompletionHandler<void(WTF::String&&)>&&)’: projects/WebKit/Source/WebKit/UIProcess/wpe/WebPasteboardProxyWPE.cpp:80:9: error: ‘GUniquePtr’ was not declared in this scope 80 | GUniquePtr<char> text(wpe_clipboard_read_text(clipboard, pasteboardType.utf8().data(), &textLength)); | ^~~~~~~~~~ projects/WebKit/Source/WebKit/UIProcess/wpe/WebPasteboardProxyWPE.cpp:80:20: error: expected primary-expression before ‘char’ 80 | GUniquePtr<char> text(wpe_clipboard_read_text(clipboard, pasteboardType.utf8().data(), &textLength)); | ^~~~ projects/WebKit/Source/WebKit/UIProcess/wpe/WebPasteboardProxyWPE.cpp:81:59: error: ‘text’ was not declared in this scope 81 | completionHandler(String::fromUTF8(unsafeMakeSpan(text.get(), textLength))); | ^~~~ projects/WebKit/Source/WebKit/UIProcess/wpe/WebPasteboardProxyWPE.cpp:78:15: error: unused variable ‘clipboard’ [-Werror=unused-variable] 78 | auto* clipboard = wpe_display_get_clipboard(wpe_display_get_primary()); | ^~~~~~~~~
Attachments
Add attachment
proposed patch, testcase, etc.
EWS
Comment 1
2025-07-03 10:45:30 PDT
Committed
296979@main
(f736754c4f90): <
https://commits.webkit.org/296979@main
> Reviewed commits have been landed. Closing PR #47554 and removing active labels.
Radar WebKit Bug Importer
Comment 2
2025-07-03 10:46:14 PDT
<
rdar://problem/154967860
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug