[WPE] Fix non-unified build after main@1f8ecb5d https://bugs.webkit.org/show_bug.cgi?id=295407

Unreviewed build fix.

* Source/WebKit/UIProcess/wpe/WebPasteboardProxyWPE.cpp: added a
missing include.

Canonical link: https://commits.webkit.org/296979@main